# HurricaneFPGA

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TESTING.md  TEST_COVERAGE_SUMMARY.md  deploy.sh  run_tests.sh
.github/workflows/: build_and_test.yml
HDL/: Makefile
HDL/hardware/constraints/: cynthion_pins.lpf
HDL/hardware/rtl/: top.v
HDL/hardware/rtl/usb_engines/: usb_hid_keyboard_engine.v  usb_hid_mouse_engine.v
HDL/hardware/rtl/usb_interface/: README.md  usb_descriptor_parser.v  usb_disconnect_detector.v  usb_enumerator.v  usb_host_arbiter.v  usb_phy_wrapper.v  usb_protocol_handler.v  usb_reset_controller.v  usb_sof_generator.v  usb_token_arbiter.v  usb_token_generator.v  usb_transaction_engine.v
HDL/hardware/rtl/usb_proxy/: buffer_manager.v  debug_interface.v  packet_proxy.v  timestamp_generator.v  uart_command_processor.v  uart_debug_output.v  uart_interface.v  usb_descriptor_forwarder.v  usb_injection_mux.v  usb_monitor.v
HDL/hardware/testbenches/: Makefile  tb_usb_descriptor_parser.v  tb_usb_hid_injector.v  tb_usb_host_arbiter.v  tb_usb_reset_controller.v  tb_usb_sof_generator.v  tb_usb_token_generator.v  tb_usb_transaction_engine.v
HDL/tools/: compile_bitstream.sh  flash_cynthion.sh  usb_host_control.py  validate_hdl.sh  verify_bram_inference.sh
docs/: NOZEN_COMMAND_REFERENCE.md
firmware/samd51_hid_injector/: Cargo.toml  README.md  memory.x
firmware/samd51_hid_injector/src/: descriptor.rs  descriptor_cache.rs  hid.rs  lib.rs  main.rs  protocol.rs  recoil.rs  state.rs  uart.rs
tools/: test_descriptor.py  test_descriptor_unit.py  test_injection.py  test_injection_unit.py
