[package]
name = "hurricanefpga"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hurricanefpga"
path = "legacy/src/frontend/main.rs"

[dependencies]
anyhow = "1.0"
nusb = "0.1.13"
bitfield = "0.13"
serialport = "4.2"
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4"
futures-lite = "1.13"
futures-channel = "0.3"
hut = "0.4.0"

# Dependencies for testing only
[dev-dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
bytemuck_derive = "1.5"
crc = "3.0"
derive_more = "0.99"
hidreport = "0.1"
itertools = "0.12"
num_enum = "0.7"
usb-ids = "1.4"
