[package]
name = "samd51_hid_injector"
version = "0.1.0"
authors = ["HurricaneFPGA Contributors"]
edition = "2021"
license = "BSD-3-Clause"

[lib]
name = "samd51_hid_injector"
path = "src/lib.rs"
test = true

[[bin]]
name = "samd51_hid_injector"
path = "src/main.rs"
test = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"

# SAMD51 Hardware Abstraction Layer
atsamd-hal = { version = "0.16", features = ["samd51j", "usb", "unproven"] }

# USB Device Stack
usb-device = "0.2"
usbd-serial = "0.1"

# No-std collections
heapless = "0.8"

[target.'cfg(not(test))'.dependencies]
panic-halt = "0.2"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
debug = true         # Keep debug symbols for debugging
panic = "abort"      # Smaller binary

[profile.dev]
opt-level = 1        # Some optimization for dev builds
debug = true
panic = "abort"      # Required for no_std
